--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,9 +17,27 @@ h2 {
 	outline-color: black;
 }
 
+h3 {
+	font-size: 60px;
+	font-weight: bolder;
+	color:white; 
+	outline-color: black;
+}
+
 button.burgerAvailable{
 	width: 400px;
 	margin-bottom: 5px;
+}
+
+button.burgerEaten{
+	width: 400px;
+	margin-bottom: 5px;
+	text-align: center;
+	color:red;
+}
+
+.form-control {
+	display: inline-block;
 }
 
 button.devourIt button.addBurgerButton{
@@ -39,7 +57,7 @@ button, input, select, textarea {
 
 footer {
 	padding-top: 20px;
-    position: absolute;
+	margin-top:40px;
     bottom: 0;
     width: 100%;
     height: 60px;
